--- a/index.html
+++ b/index.html
@@ -396,8 +396,7 @@ Media Queries
           return;
         }
 
-        // This is where you would submit payload.nonce to your server
-        alert('Submit your nonce to your server here!');
+        console.log(payload);
       });
     });
   });
